Wed, Dec 3, 2008
---------------------------------------------------------------------
- Added LICENSE file with the GNU Affero General Public License.
- Fixed auto-generated specs to make them all pass.

Tue, Dec 2, 2008
---------------------------------------------------------------------
- Added [Setting] and [Preference] models.
- Added [campaigns], [leads], and [contacts] scaffolds.
- Added [config/settings.yml] with default application settings.
- Created [lib/tasks/settings.rake] to load default settings to the database.
- Implemented [Setting] model.

Mon, Dec 1, 2008
---------------------------------------------------------------------
- Created [Permission] polymorphic model, added fixtures to load sample users, accounts, and permissions.

Sun, Nov 30, 2008
---------------------------------------------------------------------
- More work on [accounts] model, CSS styles, and [add account] form.

Sat, Nov 29, 2008
---------------------------------------------------------------------
- Added tabbed and tabless layouts, implemented tabs and current tab tracking.
- Applied CSS styles to all tabless forms (login, sign up, and forgot password).
- Created two column layout for the main contents area.
- Created [Accounts] scaffold and added [Accounts] tab.

Fri, Nov 28, 2008
---------------------------------------------------------------------
- Implemented sign up, login, logout, and forgotten password using [authlogic] plugin.

Wed, Nov 26, 2008
---------------------------------------------------------------------
- Installed [open_id_authentication] plugin.
- Modified [users] table to work with [authlogic] plugin, added tables for openid authentication.

Tue, Nov 25, 2008
---------------------------------------------------------------------
- Installed plugins: [authlogic], [searchlogic], [calendar_date_select], [auto_complete], [in_place_editor], and [haml].

Mon, Nov 24, 2008
---------------------------------------------------------------------